/*
 * Copyright 2024 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package privacy_sandbox.bidding_auction_servers.blob_fetch;

// Note: this FetchMode enum will have to be placed in a common place.
// Specify how to fetch the code blob.
enum FetchMode {
   // Fetch a single blob from an arbitrary url.
   FETCH_MODE_URL = 0;
   // Fetch all blobs from a specified bucket
   // and rely on a default blob specification.
   FETCH_MODE_BUCKET = 1;
   // Fetch a blob from a local path. Test-only.
   FETCH_MODE_LOCAL = 2;
}
